--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -1,14 +1,9 @@
 ---
 
-# - name: Create/update GLB Data Centers, Servers, and Servers Members using role.
-#   ansible.builtin.include_role: 
-#     name: ndkprd.fortiadc-glb-servers
-# I don't know that dependencies are automatically run, lol.
-
-- name: Include task to create/update GLB VSP.
-  ansible.builtin.include_tasks: add_glb_vs_pools.yaml
-  loop: "{{ fad_glb_vs_pools }}"
+- name: Include task to create/update Global DNS Policy.
+  ansible.builtin.include_tasks: add_dns_policy.yaml
+  loop: "{{ fad_dns_policies }}"
   loop_control:
-    loop_var: vs_pool
+    loop_var: dns_policy
   tags:
-    - fad_glb_vs_pools
+    - fad_dns_policy
