--- a/tasks/add_dns_policy.yaml
+++ b/tasks/add_dns_policy.yaml
@@ -82,7 +82,7 @@
 
 - name: Compoare existing value and desired value.
   ansible.builtin.debug:
-    msg: "EXISTING VALUE: {{ fad_dns_policy_existing_data.json.payload.mkey }} vs DESIRED VALUE: {{ dns_policy }}"
+    msg: "EXISTING VALUE: {{ fad_dns_policy_existing_data.json.payload }} vs DESIRED VALUE: {{ dns_policy }}"
 
 - name: Trying to create new DNS Policy entry for ({{ fad_dns_policy_name }})
   ansible.builtin.uri:
