--- a/tasks/add_dns_policy.yaml
+++ b/tasks/add_dns_policy.yaml
@@ -66,7 +66,7 @@
         "dnssec_validate_status": "{{ dns_policy.dnssec_validate_status }}",
         "forward": "{{ dns_policy.forward }}",
         "forwarders": "{{ dns_policy.forwarders }}",
-        "recursion_status": "{{ dns_policy.recursion_status }}",
+        "recurision_status": "{{ dns_policy.recursion_status }}",
         "rrlimit": "{{ dns_policy.rrlimit }}",
         zone_list: "{{ dns_policy.zone_list }}"
       }
