Fix missing quote.

--- a/tasks/add_dns_policy.yaml
+++ b/tasks/add_dns_policy.yaml
@@ -68,7 +68,7 @@
         "forwarders": "{{ dns_policy.forwarders }}",
         "recurision_status": "{{ dns_policy.recursion_status }}",
         "rrlimit": "{{ dns_policy.rrlimit }}",
-        zone_list: "{{ dns_policy.zone_list }}"
+        "zone_list": "{{ dns_policy.zone_list }}"
       }
   tags:
     - fad_dns_policy
