--- a/tasks/add_dns_policy.yaml
+++ b/tasks/add_dns_policy.yaml
@@ -7,14 +7,14 @@
   tags:
     - fad_dns_policy
 
-- name: Print out the DNS Policy REST API endpoint for ({{ fad_dns_policy_name }})
+- name: Print out the DNS Policy REST API endpoint for {{ fad_dns_policy_name }}
   ansible.builtin.debug:
     msg: "This FAD DNS Policy REST API endpoint: {{ fad_api_endpoint_dns_policy }}"
   tags:
     - fad_dns_policy
     - debug
 
-- name: Get the existing value of DNS Policy entry for ({{ fad_dns_policy_name }})
+- name: Get the existing value of DNS Policy entry for {{ fad_dns_policy_name }}
   ansible.builtin.uri:
     method: GET
     url: "{{ fad_api_endpoint_dns_policy }}"
@@ -28,7 +28,7 @@
   tags:
     - fad_dns_policy
 
-- name: Print the existing value of DNS Policy entry for ({{ fad_dns_policy_name }})
+- name: Print the existing value of DNS Policy entry for {{ fad_dns_policy_name }}
   ansible.builtin.debug:
     var: fad_dns_policy_existing_data.json.payload
   delegate_to: localhost
@@ -36,7 +36,7 @@
     - fad_dns_policy
     - debug
 
-- name: Write DNS Policy request body template for ({{ fad_dns_policy_name }})
+- name: Write DNS Policy request body template for {{ fad_dns_policy_name }}
   ansible.builtin.set_fact:
     request_body: |
       {
@@ -52,18 +52,14 @@
   tags:
     - fad_dns_policy
 
-- name: Print out the request_body result for ({{ fad_dns_policy_name }})
+- name: Print out the request_body result for {{ fad_dns_policy_name }}
   ansible.builtin.debug:
     var: request_body
   tags:
     - fad_dns_policy
     - debug
 
-- name: Compoare existing value and desired value.
-  ansible.builtin.debug:
-    msg: "EXISTING VALUE: {{ fad_dns_policy_existing_data.json.payload }} vs DESIRED VALUE: {{ dns_policy }}"
-
-- name: Trying to create new DNS Policy entry for ({{ fad_dns_policy_name }})
+- name: Trying to create new DNS Policy entry for {{ fad_dns_policy_name }}
   ansible.builtin.uri:
     method: POST
     url: "{{ fad_api_endpoint_dns_policy }}"
@@ -81,7 +77,7 @@
   tags:
     - fad_dns_policy
 
-- name: Update the DNS Policy entry if entry exist ({{ fad_dns_policy_name }}).
+- name: Update the DNS Policy entry if entry exist {{ fad_dns_policy_name }}
   ansible.builtin.uri:
     method: PUT
     url: "{{ fad_api_endpoint_dns_policy }}"
@@ -107,7 +103,7 @@
   tags:
     - fad_dns_policy
 
-- name: Check if the FAD DNS Policy value has changed ({{ fad_dns_policy_name }}).
+- name: Check if the FAD DNS Policy value has changed {{ fad_dns_policy_name }}
   ansible.builtin.uri:
     method: GET
     url: "{{ fad_api_endpoint_dns_policy }}"
@@ -122,7 +118,7 @@
   tags:
     - fad_dns_policy
 
-- name: Print the new value of the DNS Policy entry ({{ fad_dns_policy_name }}).
+- name: Print the new value of the DNS Policy entry {{ fad_dns_policy_name }}
   ansible.builtin.debug:
     var: fad_dns_policy_new_data.json
   delegate_to: localhost
