Added debug tag to change check.

--- a/tasks/add_dns_policy.yaml
+++ b/tasks/add_dns_policy.yaml
@@ -117,6 +117,7 @@
   delegate_to: localhost
   tags:
     - fad_dns_policy
+    - debug
 
 - name: Print the new value of the DNS Policy entry {{ fad_dns_policy_name }}
   ansible.builtin.debug:
