refactor: Refactored the include_tasks to simpler single tasks.

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -1,7 +1,6 @@
 ---
-fad_vdom: "root"
 
-fad_dns_policy:
+fad_dns_policies:
   - name: "DEFAULT_DNS_POLICY" # Global DNS Policy mkey
     source_address: "any" # valid Address Group entry mkey used as source
     destination_address: "any" # valid Address Group entry used as destination
@@ -10,5 +9,5 @@ fad_dns_policy:
     forward: "first" # "first" or "only"
     forwarders: "" # valid Remote DNS Servers entry mkey
     recursion_status: "disable" # "enable" or "disable"
-    rrlimit: "" # valid Response Rate Limit 
+    rrlimit: "" # valid Response Rate Limit
     zone_list: "ndkprd.com devops.ndkprd.com infra.ndkprd.com " # is here for documentation purpose only
