--- a/meta/main.yaml
+++ b/meta/main.yaml
@@ -3,7 +3,7 @@ dependencies: []
 
 galaxy_info:
   author: ndkprd
-  role_name: fortiadc-dns-policy
+  role_name: fad_dns_policy
   description: An Ansible role to mange/setup Fortinet's FortiADC Global DNS Policy configuration using REST API.
   license: MIT
   min_ansible_version: '2.12'
