--- a/vars/main.yaml
+++ b/vars/main.yaml
@@ -6,6 +6,7 @@ fad_api_endpoint:
   dns_policy: "/global_dns_server_policy?vdom={{ fad_vdom }}&mkey=%s"
   dns_zone: "/global_dns_server_zone?vdom={{ fad_vdom }}&mkey=%s"
   dns_zone_unspecified: "/global_dns_server_zone?vdom={{ fad_vdom }}"
+  dns_general_settings: "/global_dns_server_general?vdom={{ fad_vdom }}&mkey=-1"
 
 fad_api_uri_params:
   body_format: json
