--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -3,10 +3,11 @@
 - name: Create/update DNS Policy entry.
   vars:
     fad_dns_policy_api_endpoint: "{{ fad_base_url + fad_api_endpoint.dns_policy }}"
-    # get current existing zones and put them into a zone_list compatible variable
-    fad_dns_policy_zone_list:
-      "{{ (lookup('url', fad_base_url + fad_api_endpoint.dns_zone_unspecified, validate_certs=false, \
-      split_lines=false, headers=fad_api_header) | from_json).get('payload') | map(attribute='mkey') \
-      | join(' ') | trim }} "
   ansible.builtin.import_tasks: fad_dns_policy.yaml
   tags: [fad_dns_policy]
+
+- name: Update DNS General Settings.
+  vars:
+    fad_dns_general_settings_api_endpoint: "{{ fad_base_url + fad_api_endpoint.dns_general_settings }}"
+  ansible.builtin.import_tasks: fad_dns_general_settings.yaml
+  tags: [fad_dns_policy, fad_dns_general_settings]
