style: update task name.

--- a/tasks/delete_default_policy.yaml
+++ b/tasks/delete_default_policy.yaml
@@ -1,6 +1,6 @@
 ---
 
-- name: Delete new DNS Policy entry if it's not found.
+- name: Delete the default DNS Policy entry if it's found.
   vars:
     fad_dns_policy_api_endpoint: "{{ fad_base_url + fad_api_endpoint.dns_policy }}"
   ansible.builtin.uri:
